--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "burger-logger",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mysql2": "^2.2.5"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
